# sctp-sys

./: .gitignore  .project  .travis.yml  Cargo.toml  LICENSE  LICENSE-MIT  README.md  build.rs  index.html  search-index.js
examples/: dirty.rs
implementors/core/clone/: trait.Clone.js
implementors/core/marker/: trait.Copy.js
sctp_sys/: index.html
sctp_sys/common/: constant.IPPROTO_SCTP.html  constant.SOCK_SEQPACKET.html  constant.SOL_SCTP.html  index.html  struct.sctp_sndrcvinfo.html  type.sctp_assoc_t.html
sctp_sys/linux/: fn.sctp_getassocid.html  fn.sctp_getladdrs.html  fn.sctp_getpaddrs.html  fn.sctp_opt_info.html  fn.sctp_peeloff.html  fn.sctp_recvmsg.html  fn.sctp_send.html  fn.sctp_sendmsg.html  index.html  sidebar-items.js
src/: common.rs  lib.rs  linux.rs  main.rs
src/linux/: consts.rs  mod.rs
src/sctp_sys/: common.rs.html  lib.rs.html  linux.rs.html
src/sctp_sys/linux/: consts.rs.html  mod.rs.html
src/win/: consts.rs  mod.rs  winsock.rs
