[package]

name = "sctp-sys"
version = "0.0.7"
description = "Binding to libsctp for linux, and SctpDrv for windows. SctpDrv binding is experimental"
repository = "https://github.com/phsym/sctp-sys"
documentation = "http://phsym.github.io/sctp-sys"
readme = "README.md"
authors = [ "Pierre-Henri Symoneaux" ]
keywords = ["transport", "network", "sctp", "libsctp", "socket"]
license = "MIT/Apache-2.0"

build = "build.rs"

[dependencies]
libc = "^0.2"
winapi = "^0.2"

[dev-dependencies]
ws2_32-sys = "^0.2"
