[package]

name = "sctp-sys"
version = "0.0.7"
description = "Binding to libsctp for linux, and SctpDrv for windows. SctpDrv binding is experimental"
repository = "https://github.com/phsym/sctp-sys"
documentation = "http://phsym.github.io/sctp-sys"
readme = "README.md"
authors = [ "Pierre-Henri Symoneaux" ]
keywords = ["transport", "network", "sctp", "libsctp", "socket"]
license = "MIT/Apache-2.0"
edition = "2018"

build = "build.rs"

[dependencies]
libc = "^0.2"
winapi = {version = "^0.3", features = ["winsock2", "ws2tcpip"]}
